2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el: Update key bindings of eat.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (org-latex-classes): Add ctexart.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+xref-window-quit): Use `quit-windows-on'.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Check packages before
	exiting.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	Fix tui.el compatibility with htop

	* site-lisp/tui/tui.el (tui-external-terminal-exec)
	(tui-foot-exec):
	* site-lisp/tui/tui-vterm.el (tui-vterm-exec):
	* site-lisp/tui/tui-term.el (tui-term-exec):
	* site-lisp/tui/tui-eat.el (tui-eat-exec): Allow the `callback'
	argument to be nil.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-terminal-function): Add
	`tui-foot-exec' to choice candidates.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-foot-window-size): Change default
	value of tui-foot-window-size.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not clear file-name-handler-alist during startup.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	Improve foot support of tui.el

	* site-lisp/tui/tui.el (tui-foot-file, tui-foot-appid)
	(tui-foot-window-size): New user options.
	(tui-foot-exec): New function.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): New command.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el (claude-code-ide-cli-path): Set to scripts/claude.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Remove elfeed-web.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el (+dired-side): New command.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: New file.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	Remove escape key bindings from meow and set claude-code-ide backend

	* init.el: Remove escape key bindings from meow-normal-define-key and
	meow-motion-define-key.
	* init.el: Set claude-code-ide-terminal-backend to 'eat'.

2025-08-08  Zhengyi Fu  <i@fuzy.me>
