@@ -946,7 +946,7 @@ value for USE-OVERLAYS."
 
 (after-load! consult
   (remove-hook 'consult-after-jump-hook #'recenter)
-  (add-hook 'consult-after-jump-hook #'+recenter-top-30%)
+  (add-hook 'consult-after-jump-hook #'reposition-window)
 
   (add-to-list 'consult-buffer-filter "\\`\\*EGLOT")
   (add-hook 'completion-list-mode-hook #'consult-preview-at-point-mode))
@@ -1474,8 +1474,7 @@ See `xref-show-xrefs' for FETCHER and ALIST."
         xref-show-definitions-function #'+xref--show-definition
         xref-auto-jump-to-first-definition t)
   (remove-hook 'xref-after-jump-hook #'recenter)
-  (add-hook 'xref-after-jump-hook #'+recenter-top-30%)
-  (add-hook 'xref-after-return-hook #'+recenter-bottom-30%))
+  (add-hook 'xref-after-jump-hook #'reposition-window))
 
 ;;;; citre
 
